--- a/webs/style/handylink.css
+++ b/webs/style/handylink.css
@@ -1,14 +1,15 @@
-.handylink-header {
-    width: 60%;
-    margin: 0 20%;
+.handylink-header-top {
+
 }
 .handylink-header-search {
-    margin: 30px 0px;
+    width: 60%;
+    margin: 30px 20%;
 }
 .handylink-header-search-btn {
     margin-left: 10px;
 }
 
+.handylink-header,
 .handylink-main {
     width: 80%;
     margin: 0 10%;
