添加用户注册模块

--- a/webs/style/handylink.css
+++ b/webs/style/handylink.css
@@ -39,4 +39,9 @@
 .handylink-session-form {
     width: 50%;
     margin: 50px 25% 0px;
+} 
+
+.handylink-register-form {
+    width: 50%;
+    margin: 50px 25% 0px;
 }
